--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,8 @@
 		    <version>2.1.7</version>
 		</dependency>
 	</dependencies>
-	
+	<properties>
+           <maven.compiler.source>1.6</maven.compiler.source>
+           <maven.compiler.target>1.6</maven.compiler.target>
+        </properties>
 </project>
